tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions02(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions02.ts(1,18): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== unicodeExtendedEscapesInRegularExpressions02.ts (1 errors) ====
    var x = /\u{00}/gu;
                     ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    